# image_text_mi

./: .gitignore  README.md  Snakefile  data.smk  pyproject.toml  requirements.in  requirements.txt  test_ideas.txt
config/: config.yaml
config/dataset/: coco.yaml  coco35.yaml  multi30k.yaml  multi30k_train.yaml  test.yaml  xm3600.yaml
config/lang/: de.yaml
config/model/: ft-pali.yaml  gemma-2b.yaml  mblip_bloom.yaml  mblip_mt0.yaml  paligemma.yaml
config/pos/: mbert.yaml
docker/: Dockerfile  apt.txt  config.lua
sge_prof/: config.yaml
src/: Figures.py  analyze_lang.py  average_image.py  caption.py  caption_oldish.py  combine.py  compare_perplex.py  dataset.py  finetune_gemma.py  finetune_pali.py  hydratest.py  multiling.py  opinionated_ch.mplstyle  perplex_eval.py  pos.py  pos_stanza_new.py  sanity.py  test_leak.py  utils.py
src/old/: cached_model.py  finetune_gemma.py  finetune_lm.py  pos.py  test.py
