[project]
name = "mutual-information-grammar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stanza>=1.8.2",
    "snakemake>=8.18.2",
    "opencv-python>=4.10.0.84",
    "huggingface-hub[cli]>=0.24.6",
    "hydra-core>=1.3.2",
    "wandb>=0.17.7",
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "torch>=2.4.0",
    "pillow>=10.4.0",
    "rich>=13.7.1",
    "tqdm>=4.66.5",
    "transformers>=4.44.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
